[project]
name = "gpu_utilities"
version = "0.1.0"
authors = [
	{ name = "Khambar Dussaliyev", email = "dussaliyev@kolesa.kz"},
]
description = "Small utility library for gpu selection"
requires-python = ">=3.7"
keywords=["gpu"]
dependencies = [
	"torch>=1.13.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Repository" = "https://github.com/kolesa-team/gpu_utils"
