[project]
name = "gpu_utilities"
version = "0.2.0"
authors = [
	{ name = "Khambar Dussaliyev", email = "dussaliyev@kolesa.kz"},
]
description = "Small utility library for gpu selection"
requires-python = ">=3.7"
keywords=["gpu"]
dependencies = [
	"Deprecated>=1.2.13"
]

optional-dependencies = [
	"torch>=1.13.1",
	"pynvml>=11.5.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Repository" = "https://github.com/kolesa-team/gpu_utils"
